2012-06-20  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions.php: Changed ambiguous time representation
	"MM:SS minutes", that can read 'MM hours SS minute', to 
	"MM minutes SS seconds".

2012-06-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
	
	* index.php: Hack to allow use visual console editor in IE9.
	When this view is going to be rendered then change IE render 
	version to IEv7.5
	
2012-06-19 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/webchat.js, extensions/pandora_logs.php,
	extensions/update_manager/lib/functions.php, operation/tree.php,
	operation/agentes/stat_win.php,
	godmode/massive/massive_delete_modules.php,
	godmode/reporting/reporting_builder.list_items.php,
	godmode/reporting/reporting_builder.php: a lot of changes in the
	javascript for the crap browser ( = Micro$oft IE9) compatibility.

2012-06-19  Sergio Martin <sergio.martin@artica.es>

	* general/header.php: Add hint to explain the use of
	blank characters in global search as AND conditions

2012-06-19  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/db/db_audit.php: Fixed bug:don't display any 
	message to confirm the action.

2012-06-19  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/db/db_sanity.php: Fixed bug: to sanitise
	my database now, don't display any message to confirm
	the action.

2012-06-19  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php: Fixed check referer bug with 
	https when is not forced. Bug #3525494

2012-06-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/graphs/pChart/pPie.class.php: Fixed a bug in pie3d graph
	function when graph data only has one element.
	
	* include/functions_reporting.php
	 operation/reporting/reporting_viewer.php: Fixed a visualization 
	 problem in agent_modules report item.
	 
	* godmode/users/profile_list.php: Fixed a bug when profile creation
	fails.

2012-06-19  Sergio Martin <sergio.martin@artica.es>

	* include/functions_incidents.php: Fixed incidents list